Refactor LinkControllerTest unit and validation tests to use linkReponse & linkRequest instead of linkDto1 & linkDto2. Minor refactoring of other services.